# hermes

./: README.md  notify.py  pyproject.toml  requirements-server.txt  run_server.py  simulate_webhook.py
design/: component.puml  container.puml  context.puml
hermes_client/: .env.example  README.md  __init__.py  __main__.py  ado.py  cli.py  config.py  notifier.py  startup.py
hermes_server/: .env.example  ado_client.py  cli.py  config.py  database.py  dispatcher.py  formatter.py  main.py  simulate.py
hermes_server/example_payloads/: build.complete.json  pr.commented.json  pr.created.json  pr.updated.json  wi.commented.json  wi.created.json  wi.deleted.json  wi.restored.json  wi.updated.json
hermes_server/routers/: clients.py  notifications.py  webhooks.py
tests/: conftest.py  test_client_ado.py  test_client_notifier.py  test_database.py  test_dispatcher.py  test_formatter.py  test_routers.py
tests/client/: test_client_ado.py  test_client_notifier.py
tests/server/: test_database.py  test_dispatcher.py  test_formatter.py  test_routers.py
